--- a/css/comon0.css
+++ b/css/comon0.css
@@ -127,7 +127,7 @@ a:hover {
 	left: 0;
 	top: 0;
 	font-size: 18px;
-	z-index: 100000000;
+	z-index: 100;
 	width: 100%;
 	height: 100%;
 	background: #1a1a1c;
@@ -338,7 +338,7 @@ a:hover {
 	width: 50%;
 	text-align: center;
 	position: relative;
-	z-index: 100;
+	/* z-index: 100; */
 }
 
 .barbox:before,
